--- a/mago.toml
+++ b/mago.toml
@@ -1,20 +1,27 @@
 php-version = "8.5.0"
 
 [source]
-paths = ["app", "tests"]
+paths = ["packages", "src", "tests"]
 includes = ["vendor"]
 excludes = [
-  "./vendor/symfony/cache/Traits/ValueWrapper.php",
-  "./vendor/composer",
+	"./vendor/symfony/cache/Traits/ValueWrapper.php",
+	"./vendor/google/common-protos/metadata",
+	"./vendor/google/gax/metadata",
+	"./vendor/google/longrunning/metadata",
+	"./vendor/composer",
+	"**/.cache",
+	"**/*.stub.php",
+	"**/*.input.php",
+	"**/*.expected.php",
 ]
 
 [formatter]
 print-width = 180
 tab-width = 4
 use-tabs = false
+space-after-logical-not-unary-prefix-operator = true
 null-type-hint = "question"
 space-before-arrow-function-parameter-list-parenthesis = true
-space-after-logical-not-unary-prefix-operator = true
 always-break-named-arguments-list = false
 preserve-breaking-member-access-chain = true
 preserve-breaking-argument-list = true
@@ -22,3 +29,33 @@ preserve-breaking-array-like = true
 preserve-breaking-parameter-list = true
 preserve-breaking-attribute-list = true
 preserve-breaking-conditional-expression = true
+empty-line-after-opening-tag = false
+
+[linter]
+integrations = ["php-unit", "tempest"]
+
+[linter.rules]
+interface-name = { psr = false }
+trait-name = { psr = false }
+class-name = { psr = false }
+literal-named-argument = { enabled = false } # todo
+no-error-control-operator = { enabled = false }
+no-boolean-literal-comparison = { enabled = false }
+too-many-methods = { enabled = false }
+kan-defect = { enabled = false }
+cyclomatic-complexity = { enabled = false }
+return-type = { ignore-arrow-function = true, ignore-closure = true }
+parameter-type = { ignore-arrow-function = true, ignore-closure = true }
+too-many-enum-cases = { enabled = false }
+no-redundant-file = { enabled = false }
+assertion-style = { style = "this" }
+strict-assertions = { enabled = false }
+no-else-clause = { enabled = false }
+no-boolean-flag-parameter = { enabled = false }
+no-shorthand-ternary = { enabled = false }
+no-assign-in-condition = { enabled = false }
+tagged-todo = { enabled = false } # CONSIDER ENABLING
+excessive-parameter-list = { enabled = false } # https://github.com/carthage-software/mago/issues/206
+halstead = { enabled = false }
+strict-behavior = { allow-loose-behavior = true }
+no-redundant-use = { enabled = true }
