--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,17 @@
     "type": "metapackage",
     "require": {
         "tempest/framework": "@dev",
-        "feature-ninja/cva": "^0.3.1"
+        "feature-ninja/cva": "^0.3",
+        "tales-from-a-dev/tailwind-merge-php": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^12.3.10",
         "symfony/var-dumper": "^7.3.3",
-        "carthage-software/mago": "1.0.0-beta.13"
+        "carthage-software/mago": "^1"
     },
     "autoload": {
         "psr-4": {
+            "Vewe\\Ui\\": "packages/ui/src/",
             "Vewe\\Utility\\": "src/Vewe/Utility"
         }
     },
