--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "type": "metapackage",
     "require": {
         "tempest/framework": "^3",
-        "feature-ninja/cva": "^0.3",
-        "tales-from-a-dev/tailwind-merge-php": "^0.1"
+        "vewe/classvariance": "^0.1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^12.3.10",
