--- a/packages/ui/composer.json
+++ b/packages/ui/composer.json
@@ -23,8 +23,8 @@
     }
   ],
   "require": {
-    "tempest/framework": "^3",
-    "vewe/classvariance": "^0.1.1"
+    "tempest/framework": "*",
+    "vewe/classvariance": "^0.1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^12",
