--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "metapackage",
     "require": {
         "tempest/framework": "^3",
-        "vewe/classvariance": "^0.1.1"
+        "vewe/classvariance": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^12",
@@ -52,5 +52,14 @@
             "php-http/discovery": true,
             "carthage-software/mago": true
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "/Users/iamdadmin/Dev/vewe-classvariance",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
