--- a/packages/ui/composer.json
+++ b/packages/ui/composer.json
@@ -24,7 +24,7 @@
   ],
   "require": {
     "tempest/framework": "*",
-    "vewe/classvariance": "^0.1.2"
+    "vewe/classvariance": "@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "^12",
@@ -41,5 +41,14 @@
     }
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "path",
+      "url": "/Users/iamdadmin/Dev/vewe-classvariance",
+      "options": {
+        "symlink": true
+      }
+    }
+  ]
 }
